--- a/sass/pages/_newsletter.scss
+++ b/sass/pages/_newsletter.scss
@@ -16,134 +16,311 @@
 
         h1 {
             font-family: 'Times New Roman', Times, serif;
-            font-size: calc(29rem + 2vw);
+            font-size: 33rem;
             line-height: .7;
+
+            @media only screen and (max-width: 1540px) {
+                font-size: 32rem;
+            }
+            @media only screen and (max-width: 1480px) {
+                font-size: calc(28rem + 2vw);
+            }
+            @media only screen and (max-width: 1430px) {
+                font-size: calc(27rem + 2vw);
+            }
+            @media only screen and (max-width: 1385px) {
+                font-size: calc(26rem + 2vw);
+            }
+            @media only screen and (max-width: 1335px) {
+                font-size: calc(25rem + 2vw);
+            }
+            @media only screen and (max-width: 1290px) {
+                font-size: calc(24rem + 2vw);
+            }
+            @media only screen and (max-width: 1240px) {
+                font-size: calc(23rem + 2vw);
+            }
+            @media only screen and (max-width: 1190px) {
+                font-size: calc(22rem + 2vw);
+            }
+            @media only screen and (max-width: 1140px) {
+                font-size: calc(21rem + 2vw);
+            }
+            @media only screen and (max-width: 1090px) {
+                font-size: calc(20rem + 2vw);
+            }
+            @media only screen and (max-width: 1045px) {
+                font-size: calc(19rem + 2vw);
+            }
+            @media only screen and (max-width: 1000px) {
+                font-size: calc(18rem + 2vw);
+            }
+            @media only screen and (max-width: 950px) {
+                font-size: calc(17rem + 2vw);
+            }
+            @media only screen and (max-width: 900px) {
+                font-size: calc(16rem + 2vw);
+            }
+            @media only screen and (max-width: 850px) {
+                font-size: calc(15rem + 2vw);
+            }
+            @media only screen and (max-width: 800px) {
+                font-size: calc(14rem + 2vw);
+            }
+            @media only screen and (max-width: 750px) {
+                font-size: calc(13rem + 2vw);
+            }
+            @media only screen and (max-width: 710px) {
+                font-size: calc(12rem + 2vw);
+            }
+            @media only screen and (max-width: 665px) {
+                font-size: calc(11rem + 2vw);
+            }
+            @media only screen and (max-width: 620px) {
+                font-size: calc(10rem + 2vw);
+            }
+            @media only screen and (max-width: 570px) {
+                font-size: calc(9rem + 2vw);
+            }
+            @media only screen and (max-width: 520px) {
+                font-size: calc(8rem + 2vw);
+            }
         }
     }
 
-    .newsletter__items {
+    .newsletter__section {
         display: flex;
         gap: 7rem;
-        // align-items: center;
         place-content: center;
 
-        .colonne-one {
-            flex: auto;
+        @media only screen and (max-width: 1200px) {
+            gap: 4rem;
+        }
+        @media only screen and (max-width: 768px) {
+            flex-flow: column;
+        }
 
+        .colonne-one {
+            flex: 2;
+
+            .text {
+                margin-top: 7rem;
+                text-align: justify;
+                line-height: 1.8;
+            }
+            .text:first-of-type {
+                p:first-of-type {
+                    font-weight: 700;
+                }
+                p:nth-of-type(2) {
+                    margin: 2rem 0;
+                }
+            }
+
+            .extra-info {
+                text-align: center;
+                border: solid 1px;
+                padding: 4rem;
+                background-color: azure;
+
+                @media only screen and (max-width: 916px) {
+                    padding: 4rem 2rem;
+                }
+                @media only screen and (max-width: 768px) {
+                    padding: 4rem;
+                }
+                @media only screen and (max-width: 451px) {
+                    padding: 4rem 2rem;
+                }
+
+                &__titre {
+                    font-size: 8rem;
+                    font-family: 'Times New Roman', Times, serif !important;
+                    color: #ccc;
+                    letter-spacing: .5rem;
+                    border-bottom: solid 1px;
+                    padding-bottom: 1rem;
+                    margin-bottom: 3rem;
+
+                    span:first-of-type {
+                        font-weight: 900;
+                        background-image: linear-gradient(90deg, rgba(207,196,255,1) 0%, rgba(162,211,245,1) 100%);
+                        -webkit-background-clip: text;
+                        background-clip: text;
+                        color: transparent;
+                    }
+
+                    @media only screen and (max-width: 1477px) {
+                        font-size: 7rem;
+                    }
+                    @media only screen and (max-width: 1345px) {
+                        font-size: 6rem;
+                    }
+                    @media only screen and (max-width: 1210px) {
+                        font-size: 5rem;
+                    }
+                    @media only screen and (max-width: 1045px) {
+                        font-size: 4rem;
+                    }
+                    @media only screen and (max-width: 916px) {
+                        font-size: 3rem;
+                    }
+                    @media only screen and (max-width: 768px) {
+                        font-size: 7rem;
+                    }
+                    @media only screen and (max-width: 727px) {
+                        font-size: 6rem;
+                    }
+                    @media only screen and (max-width: 655px) {
+                        font-size: 5rem;
+                    }
+                    @media only screen and (max-width: 580px) {
+                        font-size: 4rem;
+                    }
+                    @media only screen and (max-width: 510px) {
+                        font-size: 3rem;
+                    }
+                }
+
+                p {
+                    font-size: 2rem;
+
+                    @media only screen and (max-width: 1210px) {
+                        font-size: 1.8rem;
+                    }
+                    @media only screen and (max-width: 1060px) {
+                        font-size: 1.6rem;
+                    }
+                    @media only screen and (max-width: 975px) {
+                        font-size: 1.4rem;
+                    }
+                    @media only screen and (max-width: 810px) {
+                        font-size: 1.2rem;
+                    }
+                    @media only screen and (max-width: 768px) {
+                        font-size: 2rem;
+                    }
+                    @media only screen and (max-width: 655px) {
+                        font-size: 1.8rem;
+                    }
+                    @media only screen and (max-width: 590px) {
+                        font-size: 1.6rem;
+                    }
+                    @media only screen and (max-width: 540px) {
+                        font-size: 1.4rem;
+                    }
+                    @media only screen and (max-width: 493px) {
+                        font-size: 1.2rem;
+                    }
+
+                    > span {
+                        margin: 0 2rem;
+
+                        @media only screen and (max-width: 1477px) {
+                            margin: 0 1rem;
+                        }
+                        @media only screen and (max-width: 1345px) {
+                            margin: 0;
+                        }
+                    }
+                }
+            }
         }
         .colonne-two {
-            flex: 1 1 57rem;
+            flex: 1.7;
 
             .image {
-                width: 57rem;
                 margin-right: auto;
                 margin-top: 9rem;
-                height: 32rem;
+                height: 50rem;
                 overflow: hidden; 
+
+                @media only screen and (max-width: 1540px) {
+                    height: 45rem;
+                }
+                @media only screen and (max-width: 1200px) {
+                    height: 40rem;
+                }
+                @media only screen and (max-width: 768px) {
+                    margin-top: 3rem;
+                }
 
                 img {
                     width: 100%;
+                    height: 100%;
                     object-fit: cover;
                 }
             }
-            > p {
-                width: 57rem;
-                margin-right: auto;
-                margin-top: 15rem;
-                line-height: 1.5;
-                text-align: justify;
-            }
-            aside {
-                background-color: #CECECE;
-                border: solid 2px #707070;
-                margin-top: 5rem;
-                width: 57rem;
-                margin-right: auto;
-                padding: 3rem 2rem;
 
-                h3 {
-                    font-size: 3rem;
-                    text-align: right;
-                    padding-bottom: 3rem;
+            p {
+                text-align: justify;
+                line-height: 1.8;
+            }
+        }
+    }
+    .newsletter__section:nth-of-type(2) {
+        margin-top: 9rem;
+    }
+    .newsletter__section:nth-of-type(3) {
+        margin-top: 9rem;
+
+        .colonne-one {
+            flex: 2;
+
+            .text {
+                margin-top: 0;
+                text-align: justify;
+                line-height: 1.8;
+            }
+            .text:first-of-type {
+                p:first-of-type {
+                    margin-bottom: 2rem;
                 }
                 > div {
                     display: flex;
-                    gap: 5rem;
+                    gap: 4rem;
 
-                    span {
-                        font-size: 5rem;
-                    }
-
-                    div h4 {
-                        font-size: 2rem;
-                        margin-bottom: 2rem;
-                    }
-                    div p {
-                        text-align: justify;
-                        margin-bottom: 4rem;
-                        line-height: 1.5;
+                    @media only screen and (max-width: 992px) {
+                        flex-flow: column;
                     }
                 }
+                div p:first-of-type {
+                    font-weight: 400;
+                }
+                div p:last-of-type {
+                    margin-top: 0;
+                }
             }
-        }
-    }
-    .text {
-        width: 80rem;
-        margin-left: auto;
-        margin-top: 9rem;
-        text-align: justify;
-        font-size: 1.4rem;
-        line-height: 1.5;
 
-        p:first-of-type {
-            font-weight: 700;
-            margin-bottom: 3rem;
         }
-        p:nth-child(2) {
-            font-weight: 500;
-            margin-bottom: 3rem;
-        }
-    }
-    .text:last-of-type {
-        margin-top: 5rem;
 
-        > div {
-            display: flex;
-            gap: 5rem;
+        .colonne-two {
+            aside {
+                display: flex;
+                flex-flow: column;
+                gap: 4rem;
+                border: solid 1px;
+                padding: 3rem;
+                background-color: azure;
 
-            p:first-of-type {
-                font-weight: 400;
+                h3 {
+                    font-size: 2rem;
+                    padding-left: 6.5rem;
+                }
+
+                > div {
+                    display: flex;
+                    gap: 3rem;
+                }
+                > div > div {
+                    display: flex;
+                    flex-flow: column;
+                    gap: 1rem;
+                }
+                > div span {
+                    font-size: 4rem;
+                }
             }
-        }
-    }
-    .extra-info {
-        background-color: #CECECE;
-        border: solid 2px #707070;
-        padding: 5rem 0;
-        margin-top: 9rem;
-
-        h2 {
-            font-size: 10rem;
-            color: white;
-            letter-spacing: 1rem;
-            border-bottom: solid 2px #707070;
-            width: 80%;
-            span {
-                font-family: 'Times New Roman', Times, serif;
-            }
-            span:first-of-type {
-                color: #707070;
-            }
-        }
-        p {
-            font-size: 1.8rem;
-            font-weight: 700;
-            margin-top: 3rem;
-            color: #707070;
-        }
-        > div {
-            width: 80rem;
-            margin-left: auto;
         }
     }
 }
