--- a/sass/pages/_service-description.scss
+++ b/sass/pages/_service-description.scss
@@ -85,7 +85,7 @@
         max-width: 75rem;
         text-align: justify;
     }
-    &__contact-button {
+    &__contact-button, &__pdf-on {
         display: flex;
         align-items: center;
         place-content: center;
@@ -105,7 +105,10 @@
             background: linear-gradient(90deg, rgba(183,235,255,1) 0%, rgba(255,191,227,1) 100%); 
         }
     }
-    &__pdf-button {
+    &__pdf-on {
+        top: 10rem;right: 0;
+    }
+    &__pdf-off {
         background-color: white;
         border: solid 1px black;
         border-radius: 1rem;
