--- a/templates/partials/_btn-reg-con.html.twig
+++ b/templates/partials/_btn-reg-con.html.twig
@@ -1,6 +1,6 @@
 {% if app.user %}
     {% if app.user.internetUsers %}
-        <a href="{{ path('app_register', {status: 'providers'}) }}">Devenez prestataire</a>
+        {# <a href="{{ path('app_register', {status: 'providers'}) }}">Devenez prestataire</a> #}
     {% endif %}
 {% else %}
     <a href="{{ path('app_login') }}">Connexion</a>
